# automacao-industrial

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
.claude/: settings.local.json
.compozy/tasks/automacao-industrial-tratamento-agua/: _prd.md  _tasks.md  auditoria-frontend.md  auditoria-sinotico.md  task_01.md  task_02.md  (+40 more)
.specs/: specs.md
.tasks/: automacao-industrial-tratamento-agua.md
backend/: Dockerfile  pyproject.toml
backend/src/automacao_industrial/api/: app.py  esquemas.py  rotas_planta.py
backend/src/automacao_industrial/aplicacao/: configuracao.py  fabrica_aplicacao.py
backend/src/automacao_industrial/controle/: controlador_tratamento_agua.py  matriz_causa_efeito.py  regras_causa_efeito.py
backend/src/automacao_industrial/dominio/: acoes_controle.py  alarme.py  estado_processo.py  limites_operacionais.py  tags_instrumentos.py
backend/src/automacao_industrial/simulacao/: cenarios_simulacao.py  servico_simulacao.py  simulador_planta.py
backend/tests/: test_api_planta.py  test_controlador_tratamento_agua.py  test_docker_configuracao.py  test_documentacao_tecnica.py  test_dominio.py  test_estrutura.py  test_matriz_causa_efeito.py  test_simulador_planta.py  test_vscode_configuracao.py
docs/: arquitetura-automacao.md  folha-dados-fit101.md  lista-instrumentos.md  pid-conceitual.md  roteiro-apresentacao.md  verificacao-final.md
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vitest.config.ts
frontend/coverage/: clover.xml  coverage-final.json  index.html
frontend/src/: App.tsx
(+93 files in other folders)
